Cleanup (minor optimization; warnings; formatting)
GitOrigin-RevId: 43207cbbbf8db43d0fcc1d7f725c80528cec7bbd